; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_RandBuf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Memory.c_RandBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @RandBuf(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i8* @Malloc(i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @Rand(i8* %7, i32 %8)
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %2, align 4
  %12 = call i32* @MemToBuf(i8* %10, i32 %11)
  store i32* %12, i32** %4, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @Free(i8* %13)
  %15 = load i32*, i32** %4, align 8
  ret i32* %15
}

declare dso_local i8* @Malloc(i32) #1

declare dso_local i32 @Rand(i8*, i32) #1

declare dso_local i32* @MemToBuf(i8*, i32) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
